--- a/docs/css/estilos.css
+++ b/docs/css/estilos.css
@@ -5,7 +5,20 @@
 	padding:0;
 }
 
-article,figcaption,figure,footer,header,hgroup,nav,section{
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+}
+
+
+
+
+article,figcaption,figure,footer,header,hgroup,section{
 	display: block;
 }
 
