--- a/docs/css/estilos.css
+++ b/docs/css/estilos.css
@@ -5,8 +5,7 @@
 	padding:0;
 }
 
-
-article,figcaption,figure,footer,header, nav, hgroup,section{
+article,figcaption,figure,footer,header,hgroup,nav,section{
 	display: block;
 }
 
@@ -174,6 +173,7 @@ nav li {
 	
 }
 
+
 nav a{
 	background: #000;
 	border: 0.1em solid #57ABB8;
@@ -202,6 +202,7 @@ nav a:hover{
 	-webkit-transition: all 0.5s ease-in;
 	transition: all 0.5s ease-out;
 }
+
 
 
 section#principal, aside{
